<resources>
    <string name="app_name">FrutiApp</string>
    <string name="fruta_descripcion">una fruta</string>
    <string name="et_nombre">¿Cómo te llamas?</string>
    <string name="jugar_btn">jugar</string>

    <string name="et_vidas">Manzanas: </string>
    <string name="jugador_nombre">Jugador: </string>
    <string name="total_score">Score: 0</string>
    <string name="sumar_btn">Comprobar</string>
    <string name="et_respuesta">Respuesta</string>
    <string name="img_manzanas">manzanas</string>
    <string name="img_numero">numero</string>
    <string name="operacion_img">simbolo de operacion matematica</string>
    <string name="msjToastNivel1">Nivel 1 - Sumas Básicas</string>
    <string name="msjToastNivel2">Nivel 2 - Sumas Moderadas</string>
    <string name="msjToastNivel3">Nivel 3 - Restas</string>
    <string name="msjToastNivelAprobado">Superaste este Nivel, Felicitaciones!</string>
    <string name="msjToastBtnComprobar">Escribe tu respuesta</string>


</resources>