<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".Main2Activity_Nivel1">

    <TextView
        android:id="@+id/textview_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="18dp"
        android:text="@string/jugador_nombre"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="200dp" />

    <TextView
        android:id="@+id/textview_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="244dp"
        android:layout_marginLeft="244dp"
        android:layout_marginTop="17dp"
        android:text="@string/total_score"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_manzanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:text="@string/et_vidas"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageview_vidas"
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="47dp"
        android:contentDescription="@string/img_manzanas"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imgview_aUno"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/img_numero"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="210dp"
        android:contentDescription="@string/operacion_img"
        app:srcCompat="@drawable/adicion" />

    <EditText
        android:id="@+id/editText_resultado"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginBottom="112dp"
        android:autofillHints=""
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_respuesta"
        android:inputType="number"
        android:textColorHint="@color/primary_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="165dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="113dp"
        android:background="@drawable/fondoboton"
        android:onClick="Comparar"
        android:text="@string/sumar_btn"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imgview_aDos"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="193dp"
        app:srcCompat="@drawable/cero" />
</RelativeLayout>