<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView_personaje"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:contentDescription="@string/fruta_descripcion"
        app:srcCompat="@drawable/sandia" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="218dp"
        android:autofillHints=""
        android:background="@drawable/fondoet"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary_dark"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="145dp"
        android:background="@drawable/fondoboton"
        android:onClick="Jugar"
        android:text="@string/jugar_btn"
        android:textSize="24sp"
        app:backgroundTint="@color/primary_dark" />

    <TextView
        android:id="@+id/textView_BestScore"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/fondoet" />
</RelativeLayout>